# scout_ros2

scout_description/corridoor_world/: model.config  model.sdf
scout_description/cylinder_world/: model.config  model.sdf
scout_description/urdf/: grogu.gazebo  grogu.sdf  grogu.urdf  grogu.xacro  grogu_wheel_1.xacro  grogu_wheel_2.xacro  grogu_wheel_3.xacro  grogu_wheel_4.xacro  mini.urdf  mini.xacro  model.config  scout_mini.gazebo  scout_mini.sdf  scout_mini.urdf  scout_mini_wheel_1.xacro  scout_mini_wheel_2.xacro  scout_wheel_type1.xacro
scout_description/urdf/scout_mini/: scout_mini.gazebo  scout_mini.sdf  scout_mini.urdf  scout_mini.xacro  scout_mini_wheel_1.xacro  scout_mini_wheel_3.xacro  scout_mini_wheel_4.xacro
scout_description/urdf2_gz/scout_mini/: scout_mini.sdf  scout_mini.urdf
scout_description/urdf_gz/scout_mini/: scout_mini.gazebo  scout_mini.sdf  scout_mini.urdf  scout_mini.xacro
scout_ugv_sim/: CMakeLists.txt  package.xml
scout_ugv_sim/launch/: empty_world.launch.py  empty_world_gz.launch.py  robot_state_publisher.launch.py  spawn_scout_mini.launch.py  spawn_scout_mini_gz.launch.py  world.launch.py
scout_ugv_sim/params/: scout_mini_bridge.yaml
scout_ugv_sim/worlds/: corridoor.world  cylinder_world.world
